--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </tr>
         <tr>
             <th class="uno" colspan="3">Valor total de la compra</th>
-            <td id="resValorTotal"></td>
+            <td class="dos" id="resValorTotal"></td>
         </tr>
     </table>
 </body>
